fix jumping

--- a/src/index.scss
+++ b/src/index.scss
@@ -237,7 +237,6 @@ a:hover{
 		z-index: 1;
 		transform: matrix3d(0.4, 0, -0.5, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1);
 		transform-style: flat;
-		border-radius: 10%;
 		overflow: hidden;
 		position: relative;
 		& + & {
@@ -249,16 +248,6 @@ a:hover{
 			border-radius: 0;
 			z-index: 2;
 			transform: matrix3d( 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-			&:first-child {
-				margin: 0 5% 0 0;
-			}
-			&:not(:first-child) {
-				//margin-top: 0%;
-				margin: 0 5% 0 -10%;
-			}
-			&:last-child {
-				margin: 0 0 0 -10%;
-			}
 			.discography__anotation{
 				background: rgba(0,0,0,0.5);
 				opacity: 1;
